--- a/node_auth_api/package.json
+++ b/node_auth_api/package.json
@@ -11,9 +11,11 @@
   "author": "Trilok",
   "license": "ISC",
   "dependencies": {
+    "csvtojson": "^2.0.10",
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.2",
+    "multer": "^1.4.4",
     "nodemon": "^2.0.15"
   }
 }
