--- a/package.json
+++ b/package.json
@@ -4,12 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node src/app.js",
+    "dev": "nodemon src/app.js"
   },
   "author": "Trilok",
   "license": "ISC",
   "dependencies": {
+    "csvtojson": "^2.0.10",
     "express": "^4.17.3",
-    "mongoose": "^6.2.2"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.2.2",
+    "multer": "^1.4.4",
+    "nodemon": "^2.0.15"
   }
 }
