--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "node_auth_api",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -11,11 +10,22 @@
   "author": "Trilok",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.2",
     "csvtojson": "^2.0.10",
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.2",
     "multer": "^1.4.4",
     "nodemon": "^2.0.15"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/trilok01/node_auth_api.git"
+  },
+  "bugs": {
+    "url": "https://github.com/trilok01/node_auth_api/issues"
+  },
+  "homepage": "https://github.com/trilok01/node_auth_api#readme",
+  "description": ""
 }
